# iSEE-AI

./: .gitignore  .gitmodules  Dockerfile  README.md  entry.sh  environment.yaml  paddle_ocr_inference.py  paddle_ocr_inference.sh  paddle_ocr_onnx.ipynb  pyproject.toml  requirements.txt  yolo_inference.py
extra/PaddleOCR/: yolo.ipynb
isee-ai/: paddle_ocr_inference.py  server.py  yolo_inference.py
notebooks/: paddle_ocr.ipynb
