[tool.poetry]
name = "isee-ai"
version = "0.1.0"
description = ""
authors = [
    "KY00KIM <dev.kyoomin@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "isee-ai" },
]


[tool.poetry.dependencies]
python  = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"

[tool.poetry.scripts]
start = "isee-ai.server:run"
main  = "main:foo"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
